# exam-studio

./: .env.example  .gitattributes  .gitlab-ci.yml  README.md  docker-compose.yml  exam.json  exam.schema.json
.claude/: launch.json
api/: .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-api-ci.yml  .msys0000000000012c030ad6dd8a096d35f7  .pre-commit-config.yaml  Dockerfile  README.md  _review_probe.py  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py  0002_integrity_constraints.py  0003_multiple_choice.py  0004_remove_numbers.py  0005_study_goals.py  0006_question_review_state.py  0007_allocation_questions.py  0008_question_explanation.py  0009_certification_exam_date.py  0010_study_goal_source.py  0011_exam_archived.py  0012_persist_session_answer_order.py  0013_users_and_ownership.py  0014_user_theme_preference.py  0015_user_settings_table.py
api/app/: auth.py  config.py  database.py  dpop.py  enums.py  importer.py  main.py  models.py
api/app/core/: config.py  errors.py  logging.py  middleware.py  observability.py  security.py
api/app/db/: base.py  session.py
api/app/domain/: analytics.py  enums.py  grading.py  periods.py  planning.py  scheduling.py  streak.py
api/app/graphql/: context.py  errors.py  loaders.py  mutations.py  planning.py  queries.py  review.py  schema.py  stats.py  types.py
api/app/models/: __init__.py  answer.py  exam.py  exam_session.py  question.py  question_category.py  question_review_state.py  section.py  session_item.py  session_item_answer.py  user.py  user_settings.py
api/app/repositories/: exams.py  review.py  sessions.py  stats.py  users.py
api/app/services/: auth.py  exams.py  review.py  sessions.py  settings.py  stats.py
api/e2e/: .gitignore  README.md  global-setup.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
api/e2e/fixtures/: sample-exam.json
api/e2e/src/: exam-payload.ts  fixtures.ts  graphql-client.ts  operations.ts  types.ts
api/e2e/tests/: add-exam-questions.spec.ts  exam-archive.spec.ts  exam-stats.spec.ts  exams.spec.ts  health.spec.ts  import-exam.spec.ts  session-lifecycle.spec.ts  sessions.spec.ts  study-goals.spec.ts  study-history.spec.ts  study-plan.spec.ts  study-review.spec.ts  study-streak.spec.ts  submit-answer.spec.ts
ci/: docker-build.gitlab-ci.yml  e2e-services.gitlab-ci.yml
client/: .dockerignore  .gitignore  .gitlab-client-ci.yml  .prettierignore  Dockerfile  README.md  angular.json  config.template.json  eslint.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json
client/docker-entrypoint.d/: 40-render-config.sh
client/e2e/: README.md  global-setup.ts  package-lock.json  package.json  playwright.config.ts  server.mjs  tsconfig.json
client/e2e/src/: api-client.ts  exam-payload.ts  fixtures.ts
client/e2e/src/pages/: archive-page.ts  dashboard-page.ts  exam-detail-page.ts  quiz-page.ts  sessions-page.ts
client/e2e/tests/: app-shell.spec.ts  exam-archive.spec.ts  exam-flow.spec.ts  exam-management.spec.ts  import-exam.spec.ts  session-management.spec.ts  study-history.spec.ts
client/public/: config.json.example
client/src/: index.html  styles.scss
client/src/app/: app.component.ts  app.config.ts  app.routes.ts  app.ts
client/src/app/core/: auth-guard.ts  auth-service.ts  config-service.ts  exam-service.spec.ts  exam-service.ts  exam.service.spec.ts  exam.service.ts  graphql-service.spec.ts  graphql-service.ts  graphql.service.spec.ts  graphql.service.ts  models.ts  settings-service.ts  theme-service.ts
client/src/app/features/archive/: archive.component.ts  archive.ts
client/src/app/features/dashboard/: dashboard.component.ts  dashboard.ts  import-dialog.ts  (+1 more)
client/src/environments/: environment.development.ts  environment.ts
docs/: auth0-setup.md
(+33 files in other folders)
